Cleanup: remove wrong assert

Was accidentally left in after refactoring.

Fixes T95347

Differential Revision: https://developer.blender.org/D13963